--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8" />
     <script src="https://kit.fontawesome.com/d547594884.js" crossorigin="anonymous"></script>
